# femocs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.exec  Makefile.save  README.md  makefile.main  surface_dense_1.xyz  surface_dense_2.xyz
analysis/: analysis.ipynb
debug/: CMakeLists.txt
doc/: femocs.doxyfile
in/: GetelecPar.in  extension_90nm.xyz  flat.ckx  flat.py  hemicone.msh  md.in  md.in.nanotip_small  minitip.xyz  nanotip_hr5.xyz  nanotip_medium.xyz  nanotip_small.ckx  sample.in  tablet.ckx
include/: AtomReader.h  Coarseners.h  Config.h  Constants.h  CurrentHeatSolver.h  CurrentsAndHeating.h  CurrentsAndHeatingStationary.h  DealII.h  DealSolver.h  EmissionReader.h  Femocs.h  Femocs_api.h  Femocs_wrap.h  FileWriter.h  GeneralProject.h  Globals.h  Interpolator.h  InterpolatorCells.h  Laplace.h  LinearInterpolator.h  Macros.h  Media.h  Medium.h  Mesh.h  MeshPreparer.h  Mesher.h  ParticleSpecies.h  PhysicalQuantities.h  Pic.h  PicCollisions.h  PoissonSolver.h  Primitives.h  ProjectHeat.h  ProjectNanotip.h  ProjectRunaway.h  ProjectSpaceCharge.h  SolutionReader.h  Surface.h  Tetgen.h  TetgenCells.h  (+17 more)
input/: apex.xyz  clusters.xyz  copper_0.msh  copper_1.msh  copper_2.msh  extension.xyz  md.in  mushroomish_surface.ckx  nanotip_big.xyz  nanotip_hr5.ckx  nanotip_medium.xyz  nanotip_molten.xyz  nanotip_rectangle.xyz  nanotip_small.xyz  rough111.ckx  tower_hl2p5.ckx
lib/: CMakeLists.txt
main/: main.cc
misc/: analysis.ipynb  both.msh  both_dense.msh  simple.geo  simple.msh  sor_data.txt
misc/doc/: heat_weak_formulation.tex
misc/gmsh_meshes/: both.bdf  both.geo  both_dense.bdf  copper.geo  copper.msh  simple.bdf  simple.geo  simple.msh  straight.geo  vacuum.geo
misc/old_code/: field_currents_heating.cc  field_currents_heating.h
old/: DealII.cpp  DealII.h
output/: elems.vtk  faces.vtk  kimocs_elems.vtk  kimocs_faces.vtk  tethex.msh
release/: CMakeLists.txt  Helmod.f90  Kimocs.c  Makefile  README  Standalone.cpp  Test.c  Test.cpp  Test.f90  makefile  makefile.C  makefile.cgal  makefile.debug  makefile.defs  makefile.doc  makefile.exec  makefile.fortran  makefile.heating  makefile.install  makefile.lib  makefile.release  makefile.solver  makefile.taito  makefile.test_c  makefile.test_f90  makefile.ubuntu  objects.mk
release/src/: subdir.mk
res/: tethex_copper.msh
res/2d_meshes/: copper_aligned.msh  copper_aligned_dense.msh  mod.msh  simple_copper.msh  simple_vacuum.msh  straight.msh  vacuum.msh  vacuum_aligned.msh  vacuum_aligned_dense.msh
res/3d_meshes/: copper_3.msh  mushroom_copper.msh  nanotip.msh  nanotip_copper.msh  nanotip_vacuum.msh
share/: CMakeLists.txt
source/: currents_and_heating.cc  currents_and_heating_stationary.cc  emitter.cc  field_currents_heating.cc  laplace.cc  main.cc  mesh_preparer.cc  physical_quantities.cc  physical_quantity_data.cc  utility.cc
src/: AtomReader.cpp  AtomReader.h  Coarseners.cpp  Config.cpp  CurrentHeatSolver.cpp  CurrentsAndHeating.cpp  CurrentsAndHeatingStationary.cpp  DealII.cpp  DealII.h  DealSolver.cpp  EmissionReader.cpp  Femocs.cpp  Femocs.cpp.orig  Femocs.h  Femocs_api.cpp  Femocs_mod.f90  Femocs_wrap.cpp  Femocs_wrap.f90  FileWriter.cpp  GeneralProject.cpp  Helmod.f90  Interpolator.cpp  InterpolatorCells.cpp  Laplace.cpp  LinearInterpolator.cpp  Macros.cpp  Macros.h  Media.cpp  Media.h  Medium.cpp  Medium.h  Mesh.cpp  Mesh.h  MeshPreparer.cpp  Mesher.cpp  Mesher.h  ParticleSpecies.cpp  PhysicalQuantities.cpp  PhysicalQuantityData.cpp  Pic.cpp  (+25 more)
src/main/: Main.c  Main.cpp
test/: Helmod.f90  Standalone.cpp
tetgen/: CMakeLists.txt  Predicates.cxx  Tetgen.cxx
